# SpaceInvadersServer

./: Barreras.c  Barreras.h  CMakeLists.txt  Clientes.h  InvaderHandler.c  InvaderHandler.h  ObjetosJuego.c  ObjetosJuego.h  Proyectiles.c  Proyectiles.h  Server.c  Server.h  Socket.c  Socket.h  invader.c  invader.h  linkedList.c  linkedList.h  main.c  misil.c  misil.h  nave.c  nave.h
JSON/: JsonHandler.c  JsonHandler.h
Logica/: ComprobarLogica.c  ComprobarLogica.h  Jugadores.c  Jugadores.h
